# SlideSummarizer-AI

./: .gitignore  README.md
backend/: README.md  database.py  init_db.py  requirements.txt
backend/api/: __init__.py  app.py  requirements.txt
backend/client/: pyproject.toml
backend/client/src/gemini_explainer_client/: __init__.py  client.py
backend/db/: gemini_explainer.db
backend/explainer/: __init__.py  explainer_service.py  requirements.txt
backend/gemini-explainer/: gemini_client.py  main.py  ppt_parser.py  test_script.py
backend/shared/outputs/: 6fa3c10b-1b77-4925-8dfc-f4073506d5b4.json  cd8155bd-e2b8-4f13-9a2e-3d288a8b5227.json  d3026886-1cc0-4015-aa16-e0a6ea13e49a.json
backend/shared/uploads/: d3026886-1cc0-4015-aa16-e0a6ea13e49a.pptx
backend/tests/: test_system.py
frontend/: package-lock.json  package.json
frontend-old/src/: App.js
frontend/src/: App.js
